# LEON-Drafting-Skills-Documentation

./: .gitignore  CONTRIBUTING.md  README.md
cicd/: .gitignore  app.py  requirements.txt
cicd/buildspec/: build.yml  deploy.yml
cicd/config/: __init__.py  skills_registry.py
cicd/lambda/: notification_handler.py
cicd/scripts/: fix_bootstrap_passrole.py
cicd/stacks/: __init__.py  pipeline_stack.py
cloudformation/: README.md
cloudformation/tags/: a207920_stack_tags_ci.json  a207920_stack_tags_test.json
cloudformation/templates/: a207920_leon_skills_shared_alb.yaml
docs/: README.md  index.html
shared/: pyproject.toml
shared/src/shared/: __init__.py
shared/src/shared/llm/: __init__.py  config.py  constants.py  factory.py  orchestrator.py
spot-story/: .env.example  .gitignore  README.md  pyproject.toml  setup-local.sh
spot-story/infra/: README.md  app.py  cdk.json  config.py  deploy.sh  mcp_stack.py
spot-story/src/: main.py
spot-story/src/services/: spot_story_service.py
spot-story/src/tools/: __init__.py  generate_spot_story.py
story-drafting/: .env.example  Dockerfile  Dockerfile.local  README.md  docker-compose.local.yml  docker-entrypoint.sh  pyproject.toml  run-docker-local.sh  run.py  setup-local-pip.sh  uv.toml
story-drafting/infra/: README.md  app.py  config.py  deploy.sh  mcp_stack.py  (+1 more)
text-archive/: .env.example  Dockerfile  pyproject.toml  run-docker-local.sh  run.py
text-archive/infra/: app.py  config.py  deploy.sh  mcp_stack.py
text-archive/src/: main.py  models.py
text-archive/src/tools/: __init__.py  archive_search.py  base.py
urgent-drafting/: .env.example  Dockerfile  Dockerfile.local  README.md  docker-compose.local.yml  pyproject.toml  run-docker-local.sh  run.py  uv.toml
urgent-drafting/infra/: README.md  app.py  config.py  deploy.sh  mcp_stack.py  requirements.txt
urgent-drafting/src/: __init__.py  main.py  models.py
urgent-drafting/src/config/: __init__.py  llm_config.py  llm_skill_config.py
urgent-drafting/src/prompts/: __init__.py  intent_interpreter_prompts.py  reuters_prompts.py
urgent-drafting/src/services/: __init__.py  asset_api.py  intent_interpreter.py  intent_models.py  llm_orchestrator.py
urgent-drafting/src/tools/: __init__.py  generate_urgent_draft.py  urgent_draft_tool.py  urgent_helpers.py
urgent-drafting/src/tools/urgent_actions/: __init__.py  asset_manager.py  constants.py  generate.py  refine.py  regenerate.py
urgent-drafting/src/utils/: __init__.py  azure_token_util.py
(+29 files in other folders)
