[project]
name = "sphinx-shared"
version = "0.1.0"
description = "Shared utilities for Sphinx Leon Assistant Skills"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "azure-identity>=1.15.0",
    "azure-core>=1.26.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
